--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta certified="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Service Providers</title>
 </head>
 <body>
     <div class="container">
